@@ -850,6 +850,10 @@
 #define IDS_EOL_UNIX                    30402
 #define IDS_EOL_MIXED                   30403
 #define IDS_EOL_BIN                     30404
+#define IDS_EOL_LF                      30405
+#define IDS_EOL_CR                      30406
+#define IDS_EOL_CRLF                    30407
+#define IDS_EOL_NONE                    30408
 #define IDS_SUFFIX_BYTE                 30416
 #define IDS_SUFFIX_KILO                 30417
 #define IDS_SUFFIX_MEGA                 30418
